# model-asset-guard

./: .gitattributes  .gitignore  LICENSE  README.md  lakefile.lean  lean-toolchain  node_guard.js  pyproject.toml  test_huggingface_integration.py  test_perfect_hash_integration.py
.github/: dependabot.yml
.github/workflows/: bundle-push.yml  ci.yml  codeql.yml  formal-verify.yml  secret-scan.yml
BitFlipCorpus/: Main.lean
ModelAssetGuard/Quant/: LayerBound.lean
QuantBound/: Main.lean
Tests/: Main.lean
TokenizerTest/: Main.lean
VerifyWeights/: Main.lean
bindings/nodejs/: node_guard.js
bindings/python/: pytorch_guard.py
docs/: perfect-hash-tokenizer.md
guardd/: Cargo.toml
guardd/src/: bitflip_corpus.rs  perfect_hash.rs  quant_verification.rs
scripts/: bundle.sh  ci_preflight.sh  cleanup.bat  final_cleanup.bat  restructure.bat  restructure.sh  set_quantization_secret.bat  set_quantization_secret.sh  update_lakefile.sh  verify_structure.bat
src/lean/: ModelAssetGuard.lean  Tests.lean
src/lean/ModelAssetGuard/: Weights.lean
src/lean/ModelAssetGuard/Quant/: Core.lean  LayerBound.lean
src/lean/ModelAssetGuard/Token/: Tokenizer.lean
src/lean/cli/Benchmarks/: Main.lean
src/lean/cli/PerfectHash/: Main.lean
src/lean/cli/QuantVerify128/: Main.lean
src/rust/guardd/: Cargo.toml
src/rust/guardd/src/: bitflip_corpus.rs  lib.rs  perfect_hash.rs  quant_verification.rs
tests/e2e/: test_huggingface_integration.py  test_perfect_hash_integration.py
tests/unit/lean/: .gitkeep
